--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
-  "python.pythonPath": "/Users/hiroki-sakano/.local/share/virtualenvs/atcoder-BLqkK5U_/bin/python",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "python.formatting.provider": "autopep8",
+  "python.linting.enabled": true,
+  "python.linting.flake8Enabled": true,
+  "python.linting.pylintEnabled": false,
+  "python.linting.lintOnSave": true,
+  "python.pythonPath": "/Users/hiroki-sakano/.local/share/virtualenvs/atcoder-BLqkK5U_/bin/python"
 }
