--- a/compete.toml
+++ b/compete.toml
@@ -84,6 +84,9 @@ smallvec = "=1.2.0"
 [new.template.src]
 kind = "inline"
 content = '''
+use proconio::{fastout, input};
+
+#[fastout]
 fn main() {
     todo!();
 }
