--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "editor.formatOnSave": true,
+  "editor.tabSize": 4,
   "python.formatting.provider": "autopep8",
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": true,
